[package]
name = "ra-updater"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1", features = ["derive"]  }
anyhow = "1"
serde_json = "1"
rayon = "1"
bytes = "1"
toml = "0.5"
flate2 = "1"
dirs-next = "2.0.0"
parking_lot = "0.11"
tokio = { version = "1", features = ["full"]  }

