[package]
name = "ra-updater"
version = "1.0.1"
authors = ["Ares <andrew_ares@outlook.com>"]
edition = "2021"
description = "rust-analyzer updater"

[dependencies]
anyhow = "1"
serde_json = "1"
rayon = "1"
bytes = "1"
flate2 = "1"
dirs-next = "2"
crossbeam = "0.8"
strum = "0.23"
strum_macros = "0.23"

[dependencies.clap]
version = "3"
features = ["derive"]

[dependencies.reqwest]
version = "0.11"
features = ["blocking"]

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "sync", "tracing"]

[dependencies.console-subscriber]
git = "https://github.com/tokio-rs/console.git"
optional = true

[dependencies.openssl-sys]
version = "*"
optional = true

[profile.release]
opt-level = "s"
debug = false
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
codegen-units = 256
rpath = false
incremental = true

[features]
vendored = ["openssl-sys/vendored"]
tracing = ["console-subscriber"]

